--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,32 @@
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
-.venv/
-venv/
-env/
-ENV/
-*.env
-.envrc
-.venv.bak/
-.coverage
-.tox/
-.nox/
-.pytest_cache/
-coverage.xml
-nosetests.xml
-htmlcov/
-.ipynb_checkpoints
-.vscode/
-.idea/
-.spyproject/
-.ropeproject/
-*.sublime-project
-*.sublime-workspace
 
-# -----------------------------------------------------------------------------
-# 🧩 Environments & Configs
-# -----------------------------------------------------------------------------
-.env
-.env.*
-config.json
-config.yaml
-config.yml
-settings.json
-.notebook_checkpoint/
-__temp__/
-tmp/
-local_settings.py
+# C extensions
+*.so
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
